demo/nginx-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: www
              mountPath: /var/www/html
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
        - name: www
          configMap:
            name: app-code
            # mount all keys as files under /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
