demo/php-fpm-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: php-fpm
  namespace: demo
spec:
  selector:
    matchLabels:
      app: php-fpm
  replicas: 2
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
        - name: php-fpm
          image: php:8.1-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: www
              mountPath: /var/www/html
      volumes:
        - name: www
          configMap:
            name: php-code
            # mount all keys as files under /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: php-fpm
  namespace: demo
spec:
  selector:
    app: php-fpm
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
  clusterIP: None
